Assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Statements
Rule 2     Statements -> Statement
Rule 3     Statements -> Statements SEM Statement
Rule 4     Statement -> If
Rule 5     Statement -> While
Rule 6     Statement -> Assignment
Rule 7     Statement -> Read
Rule 8     Statement -> Write
Rule 9     Statement -> If_Else
Rule 10    If_Else -> IF Comparison THEN Statements ELSE Statements END
Rule 11    If -> IF Comparison THEN Statements END
Rule 12    Read -> READ Id
Rule 13    Write -> WRITE Expression
Rule 14    While -> WHILE Comparison DO Statements END
Rule 15    Assignment -> Id BEC Expression
Rule 16    Comparison -> Expression Relation Expression
Rule 17    Relation -> EQ
Rule 18    Relation -> NEQ
Rule 19    Relation -> LESS
Rule 20    Relation -> LEQ
Rule 21    Relation -> GRTR
Rule 22    Relation -> GEQ
Rule 23    Expression -> Expression ADD Expression
Rule 24    Expression -> Expression SUB Expression
Rule 25    Expression -> Expression MUL Expression
Rule 26    Expression -> Expression DIV Expression
Rule 27    Expression -> LPAR Expression RPAR
Rule 28    Expression -> NUM
Rule 29    Expression -> Id
Rule 30    Id -> ID

Terminals, with rules where they appear

ADD                  : 23
BEC                  : 15
DIV                  : 26
DO                   : 14
ELSE                 : 10
END                  : 10 11 14
EQ                   : 17
GEQ                  : 22
GRTR                 : 21
ID                   : 30
IF                   : 10 11
LEQ                  : 20
LESS                 : 19
LPAR                 : 27
MUL                  : 25
NEQ                  : 18
NUM                  : 28
READ                 : 12
RPAR                 : 27
SEM                  : 3
SUB                  : 24
THEN                 : 10 11
WHILE                : 14
WRITE                : 13
error                : 

Nonterminals, with rules where they appear

Assignment           : 6
Comparison           : 10 11 14
Expression           : 13 15 16 16 23 23 24 24 25 25 26 26 27
Id                   : 12 15 29
If                   : 4
If_Else              : 9
Program              : 0
Read                 : 7
Relation             : 16
Statement            : 2 3
Statements           : 1 3 10 10 11 14
While                : 5
Write                : 8

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Statements
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) Statement -> . If_Else
    (11) If -> . IF Comparison THEN Statements END
    (14) While -> . WHILE Comparison DO Statements END
    (15) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (13) Write -> . WRITE Expression
    (10) If_Else -> . IF Comparison THEN Statements ELSE Statements END
    (30) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    Program                        shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    If_Else                        shift and go to state 9
    Id                             shift and go to state 12

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Statements .
    (3) Statements -> Statements . SEM Statement

    $end            reduce using rule 1 (Program -> Statements .)
    SEM             shift and go to state 16


state 3

    (2) Statements -> Statement .

    SEM             reduce using rule 2 (Statements -> Statement .)
    $end            reduce using rule 2 (Statements -> Statement .)
    END             reduce using rule 2 (Statements -> Statement .)
    ELSE            reduce using rule 2 (Statements -> Statement .)


state 4

    (4) Statement -> If .

    SEM             reduce using rule 4 (Statement -> If .)
    $end            reduce using rule 4 (Statement -> If .)
    END             reduce using rule 4 (Statement -> If .)
    ELSE            reduce using rule 4 (Statement -> If .)


state 5

    (5) Statement -> While .

    SEM             reduce using rule 5 (Statement -> While .)
    $end            reduce using rule 5 (Statement -> While .)
    END             reduce using rule 5 (Statement -> While .)
    ELSE            reduce using rule 5 (Statement -> While .)


state 6

    (6) Statement -> Assignment .

    SEM             reduce using rule 6 (Statement -> Assignment .)
    $end            reduce using rule 6 (Statement -> Assignment .)
    END             reduce using rule 6 (Statement -> Assignment .)
    ELSE            reduce using rule 6 (Statement -> Assignment .)


state 7

    (7) Statement -> Read .

    SEM             reduce using rule 7 (Statement -> Read .)
    $end            reduce using rule 7 (Statement -> Read .)
    END             reduce using rule 7 (Statement -> Read .)
    ELSE            reduce using rule 7 (Statement -> Read .)


state 8

    (8) Statement -> Write .

    SEM             reduce using rule 8 (Statement -> Write .)
    $end            reduce using rule 8 (Statement -> Write .)
    END             reduce using rule 8 (Statement -> Write .)
    ELSE            reduce using rule 8 (Statement -> Write .)


state 9

    (9) Statement -> If_Else .

    SEM             reduce using rule 9 (Statement -> If_Else .)
    $end            reduce using rule 9 (Statement -> If_Else .)
    END             reduce using rule 9 (Statement -> If_Else .)
    ELSE            reduce using rule 9 (Statement -> If_Else .)


state 10

    (11) If -> IF . Comparison THEN Statements END
    (10) If_Else -> IF . Comparison THEN Statements ELSE Statements END
    (16) Comparison -> . Expression Relation Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Comparison                     shift and go to state 17
    Expression                     shift and go to state 18
    Id                             shift and go to state 21

state 11

    (14) While -> WHILE . Comparison DO Statements END
    (16) Comparison -> . Expression Relation Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Comparison                     shift and go to state 22
    Expression                     shift and go to state 18
    Id                             shift and go to state 21

state 12

    (15) Assignment -> Id . BEC Expression

    BEC             shift and go to state 23


state 13

    (12) Read -> READ . Id
    (30) Id -> . ID

    ID              shift and go to state 15

    Id                             shift and go to state 24

state 14

    (13) Write -> WRITE . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 25
    Id                             shift and go to state 21

state 15

    (30) Id -> ID .

    BEC             reduce using rule 30 (Id -> ID .)
    ADD             reduce using rule 30 (Id -> ID .)
    SUB             reduce using rule 30 (Id -> ID .)
    MUL             reduce using rule 30 (Id -> ID .)
    DIV             reduce using rule 30 (Id -> ID .)
    EQ              reduce using rule 30 (Id -> ID .)
    NEQ             reduce using rule 30 (Id -> ID .)
    LESS            reduce using rule 30 (Id -> ID .)
    LEQ             reduce using rule 30 (Id -> ID .)
    GRTR            reduce using rule 30 (Id -> ID .)
    GEQ             reduce using rule 30 (Id -> ID .)
    SEM             reduce using rule 30 (Id -> ID .)
    $end            reduce using rule 30 (Id -> ID .)
    END             reduce using rule 30 (Id -> ID .)
    ELSE            reduce using rule 30 (Id -> ID .)
    RPAR            reduce using rule 30 (Id -> ID .)
    THEN            reduce using rule 30 (Id -> ID .)
    DO              reduce using rule 30 (Id -> ID .)


state 16

    (3) Statements -> Statements SEM . Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) Statement -> . If_Else
    (11) If -> . IF Comparison THEN Statements END
    (14) While -> . WHILE Comparison DO Statements END
    (15) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (13) Write -> . WRITE Expression
    (10) If_Else -> . IF Comparison THEN Statements ELSE Statements END
    (30) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    Statement                      shift and go to state 26
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    If_Else                        shift and go to state 9
    Id                             shift and go to state 12

state 17

    (11) If -> IF Comparison . THEN Statements END
    (10) If_Else -> IF Comparison . THEN Statements ELSE Statements END

    THEN            shift and go to state 27


state 18

    (16) Comparison -> Expression . Relation Expression
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression
    (17) Relation -> . EQ
    (18) Relation -> . NEQ
    (19) Relation -> . LESS
    (20) Relation -> . LEQ
    (21) Relation -> . GRTR
    (22) Relation -> . GEQ

    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34
    LESS            shift and go to state 35
    LEQ             shift and go to state 36
    GRTR            shift and go to state 37
    GEQ             shift and go to state 38

    Relation                       shift and go to state 28

state 19

    (27) Expression -> LPAR . Expression RPAR
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 39
    Id                             shift and go to state 21

state 20

    (28) Expression -> NUM .

    ADD             reduce using rule 28 (Expression -> NUM .)
    SUB             reduce using rule 28 (Expression -> NUM .)
    MUL             reduce using rule 28 (Expression -> NUM .)
    DIV             reduce using rule 28 (Expression -> NUM .)
    EQ              reduce using rule 28 (Expression -> NUM .)
    NEQ             reduce using rule 28 (Expression -> NUM .)
    LESS            reduce using rule 28 (Expression -> NUM .)
    LEQ             reduce using rule 28 (Expression -> NUM .)
    GRTR            reduce using rule 28 (Expression -> NUM .)
    GEQ             reduce using rule 28 (Expression -> NUM .)
    SEM             reduce using rule 28 (Expression -> NUM .)
    $end            reduce using rule 28 (Expression -> NUM .)
    END             reduce using rule 28 (Expression -> NUM .)
    ELSE            reduce using rule 28 (Expression -> NUM .)
    RPAR            reduce using rule 28 (Expression -> NUM .)
    THEN            reduce using rule 28 (Expression -> NUM .)
    DO              reduce using rule 28 (Expression -> NUM .)


state 21

    (29) Expression -> Id .

    ADD             reduce using rule 29 (Expression -> Id .)
    SUB             reduce using rule 29 (Expression -> Id .)
    MUL             reduce using rule 29 (Expression -> Id .)
    DIV             reduce using rule 29 (Expression -> Id .)
    EQ              reduce using rule 29 (Expression -> Id .)
    NEQ             reduce using rule 29 (Expression -> Id .)
    LESS            reduce using rule 29 (Expression -> Id .)
    LEQ             reduce using rule 29 (Expression -> Id .)
    GRTR            reduce using rule 29 (Expression -> Id .)
    GEQ             reduce using rule 29 (Expression -> Id .)
    SEM             reduce using rule 29 (Expression -> Id .)
    $end            reduce using rule 29 (Expression -> Id .)
    END             reduce using rule 29 (Expression -> Id .)
    ELSE            reduce using rule 29 (Expression -> Id .)
    RPAR            reduce using rule 29 (Expression -> Id .)
    THEN            reduce using rule 29 (Expression -> Id .)
    DO              reduce using rule 29 (Expression -> Id .)


state 22

    (14) While -> WHILE Comparison . DO Statements END

    DO              shift and go to state 40


state 23

    (15) Assignment -> Id BEC . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Id                             shift and go to state 21
    Expression                     shift and go to state 41

state 24

    (12) Read -> READ Id .

    SEM             reduce using rule 12 (Read -> READ Id .)
    $end            reduce using rule 12 (Read -> READ Id .)
    END             reduce using rule 12 (Read -> READ Id .)
    ELSE            reduce using rule 12 (Read -> READ Id .)


state 25

    (13) Write -> WRITE Expression .
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression

    SEM             reduce using rule 13 (Write -> WRITE Expression .)
    $end            reduce using rule 13 (Write -> WRITE Expression .)
    END             reduce using rule 13 (Write -> WRITE Expression .)
    ELSE            reduce using rule 13 (Write -> WRITE Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 26

    (3) Statements -> Statements SEM Statement .

    SEM             reduce using rule 3 (Statements -> Statements SEM Statement .)
    $end            reduce using rule 3 (Statements -> Statements SEM Statement .)
    END             reduce using rule 3 (Statements -> Statements SEM Statement .)
    ELSE            reduce using rule 3 (Statements -> Statements SEM Statement .)


state 27

    (11) If -> IF Comparison THEN . Statements END
    (10) If_Else -> IF Comparison THEN . Statements ELSE Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) Statement -> . If_Else
    (11) If -> . IF Comparison THEN Statements END
    (14) While -> . WHILE Comparison DO Statements END
    (15) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (13) Write -> . WRITE Expression
    (10) If_Else -> . IF Comparison THEN Statements ELSE Statements END
    (30) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    Statements                     shift and go to state 42
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    If_Else                        shift and go to state 9
    Id                             shift and go to state 12

state 28

    (16) Comparison -> Expression Relation . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 43
    Id                             shift and go to state 21

state 29

    (23) Expression -> Expression ADD . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 44
    Id                             shift and go to state 21

state 30

    (24) Expression -> Expression SUB . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 45
    Id                             shift and go to state 21

state 31

    (25) Expression -> Expression MUL . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 46
    Id                             shift and go to state 21

state 32

    (26) Expression -> Expression DIV . Expression
    (23) Expression -> . Expression ADD Expression
    (24) Expression -> . Expression SUB Expression
    (25) Expression -> . Expression MUL Expression
    (26) Expression -> . Expression DIV Expression
    (27) Expression -> . LPAR Expression RPAR
    (28) Expression -> . NUM
    (29) Expression -> . Id
    (30) Id -> . ID

    LPAR            shift and go to state 19
    NUM             shift and go to state 20
    ID              shift and go to state 15

    Expression                     shift and go to state 47
    Id                             shift and go to state 21

state 33

    (17) Relation -> EQ .

    LPAR            reduce using rule 17 (Relation -> EQ .)
    NUM             reduce using rule 17 (Relation -> EQ .)
    ID              reduce using rule 17 (Relation -> EQ .)


state 34

    (18) Relation -> NEQ .

    LPAR            reduce using rule 18 (Relation -> NEQ .)
    NUM             reduce using rule 18 (Relation -> NEQ .)
    ID              reduce using rule 18 (Relation -> NEQ .)


state 35

    (19) Relation -> LESS .

    LPAR            reduce using rule 19 (Relation -> LESS .)
    NUM             reduce using rule 19 (Relation -> LESS .)
    ID              reduce using rule 19 (Relation -> LESS .)


state 36

    (20) Relation -> LEQ .

    LPAR            reduce using rule 20 (Relation -> LEQ .)
    NUM             reduce using rule 20 (Relation -> LEQ .)
    ID              reduce using rule 20 (Relation -> LEQ .)


state 37

    (21) Relation -> GRTR .

    LPAR            reduce using rule 21 (Relation -> GRTR .)
    NUM             reduce using rule 21 (Relation -> GRTR .)
    ID              reduce using rule 21 (Relation -> GRTR .)


state 38

    (22) Relation -> GEQ .

    LPAR            reduce using rule 22 (Relation -> GEQ .)
    NUM             reduce using rule 22 (Relation -> GEQ .)
    ID              reduce using rule 22 (Relation -> GEQ .)


state 39

    (27) Expression -> LPAR Expression . RPAR
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression

    RPAR            shift and go to state 48
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 40

    (14) While -> WHILE Comparison DO . Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Assignment
    (7) Statement -> . Read
    (8) Statement -> . Write
    (9) Statement -> . If_Else
    (11) If -> . IF Comparison THEN Statements END
    (14) While -> . WHILE Comparison DO Statements END
    (15) Assignment -> . Id BEC Expression
    (12) Read -> . READ Id
    (13) Write -> . WRITE Expression
    (10) If_Else -> . IF Comparison THEN Statements ELSE Statements END
    (30) Id -> . ID

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    ID              shift and go to state 15

    Statements                     shift and go to state 49
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Assignment                     shift and go to state 6
    Read                           shift and go to state 7
    Write                          shift and go to state 8
    If_Else                        shift and go to state 9
    Id                             shift and go to state 12

state 41

    (15) Assignment -> Id BEC Expression .
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression

    SEM             reduce using rule 15 (Assignment -> Id BEC Expression .)
    $end            reduce using rule 15 (Assignment -> Id BEC Expression .)
    END             reduce using rule 15 (Assignment -> Id BEC Expression .)
    ELSE            reduce using rule 15 (Assignment -> Id BEC Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 42

    (11) If -> IF Comparison THEN Statements . END
    (10) If_Else -> IF Comparison THEN Statements . ELSE Statements END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 50
    ELSE            shift and go to state 51
    SEM             shift and go to state 16


state 43

    (16) Comparison -> Expression Relation Expression .
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression

    THEN            reduce using rule 16 (Comparison -> Expression Relation Expression .)
    DO              reduce using rule 16 (Comparison -> Expression Relation Expression .)
    ADD             shift and go to state 29
    SUB             shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32


state 44

    (23) Expression -> Expression ADD Expression .
    (23) Expression -> Expression . ADD Expression
    (24) Expression -> Expression . SUB Expression
    (25) Expression -> Expression . MUL Expression
    (26) Expression -> Expression . DIV Expression
